try to fix disappearing footer on iphone

--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,27 +1,29 @@
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+  bottom: 0;
+  display: flex;
+  flex: 0 0 auto;
+  height: 2em;
+  left: 0;
+  position: absolute;
+  right: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+
+  &__content {
+    align-items: center;
     display: flex;
-    flex: 0 0 auto;
-    right: 0;
-    height: 2em;
+    font-size: 0.85em;
+    height: 100%;
+    margin: 0 auto;
+    max-width: 1200px;
+    white-space: nowrap;
+    width: 100%;
 
-    &__content {
-        height: 100%;
-        align-items: center;
-        max-width: 1200px;
-        margin: 0 auto;
-        display: flex;
-        font-size: 0.85em;
-        white-space: nowrap;
-        width: 100%;
-
-        button {
-            background: transparent;
-            border: none;
-            color: #888;
-            cursor: pointer;
-        }
+    button {
+      background: transparent;
+      border: none;
+      color: #888;
+      cursor: pointer;
     }
+  }
 }
